welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:14: error: expected class or object definition
def makeV(c: Color){
^MethodsPicture:33: error: Unmatched closing brace '}' ignored here
}
^